clusters/beryjuio-prod/minio-backup/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: minio-backup
  labels:
    istio-injection: enabled
