clusters/beryjuio-prod/minio-backup/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: minio
  name: minio-${CLUSTER_NAME}
  namespace: minio-backup
spec:
  ports:
    - name: http
      port: 9000
      protocol: TCP
      targetPort: 9000
    - name: http-console
      port: 9001
      protocol: TCP
      targetPort: 9001
  selector:
    app.kubernetes.io/name: minio
  type: ClusterIP
